<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".MainActivity">

    <com.amap.api.maps2d.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_simulate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="start_simulation"
        android:text="@string/button_start"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edittext_longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="auto"
        android:inputType="textPersonName"
        android:text="@string/edittext_zero"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_longitude" />

    <EditText
        android:id="@+id/edittext_latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_zero"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_latitude"
        app:layout_constraintEnd_toStartOf="@+id/button_longitude"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_latitude" />

    <Button
        android:id="@+id/button_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_longitude"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/button_latitude" />

    <Button
        android:id="@+id/button_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_latitude"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/button_speed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="add_point"
        android:text="@string/button_add_point"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/button_simulate"
        app:layout_constraintEnd_toStartOf="@+id/button_delete_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="delete_point"
        android:text="@string/button_delete_point"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_add_point"
        app:layout_constraintEnd_toStartOf="@+id/button_clear_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_add_point" />

    <Button
        android:id="@+id/button_clear_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="clear_point"
        android:text="@string/button_clear_point"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_delete_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_delete_point" />

    <Button
        android:id="@+id/button_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_speed"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/button_add_point"
        app:layout_constraintEnd_toStartOf="@+id/button_goto_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_goto_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goto_point"
        android:text="@string/button_goto_point"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_speed" />

    <EditText
        android:id="@+id/edittext_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_one"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_speed"
        app:layout_constraintEnd_toStartOf="@+id/button_goto_point"
        app:layout_constraintStart_toEndOf="@+id/button_speed" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="help"
        android:text="@string/button_help"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

